text color to red

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -280,6 +280,7 @@ main .section.highlight {
 }
 .yellow {
     background-color: yellow;
+    color: red;
 }
 .orange {
     background-color: orange;
